# peptalk-py

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.py  test.py
peptalk/: profiling.py
src/: main.cpp
